[tool.poetry]
name = "pythonproject3"
version = "0.1.0"
description = ""
authors = ["anna-golovacheva <anna.ch.ollala@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sympy = "^1.11.1"
numpy = "^1.23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
